@@ -33,12 +33,12 @@ import org.keycloak.representations.idm.*;
 import java.io.IOException;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 import static de.adorsys.keycloak.config.test.util.KeycloakRepository.getAuthenticatorConfig;
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.*;
 import static org.hamcrest.core.Is.is;
+import static org.hamcrest.core.IsNull.nullValue;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 
 @SuppressWarnings({"java:S5961", "java:S5976", "deprecation"})
@@ -452,9 +452,14 @@ class ImportAuthenticationFlowsIT extends AbstractImportIT {
         AuthenticationExecutionExportRepresentation myForms2 = getExecutionFlowFromFlow(flow, "my forms 2");
         assertThat(myForms2, notNullValue());
         assertThat(myForms2.getRequirement(), is("ALTERNATIVE"));
-        assertThat(myForms2.getPriority(), is(4));
         assertThat(myForms2.isUserSetupAllowed(), is(false));
         assertThat(myForms2.isAutheticatorFlow(), is(true));
+
+        if (VersionUtil.ge(KEYCLOAK_VERSION, "25")) {
+            assertThat(myForms2.getPriority(), is(27));
+        } else {
+            assertThat(myForms2.getPriority(), is(4));
+        }
     }
 
     AuthenticationFlowRepresentation assertThatBrowserFlowIsUpdated(int expectedNumberOfExecutionsInFlow) {
@@ -473,9 +478,14 @@ class ImportAuthenticationFlowsIT extends AbstractImportIT {
         AuthenticationExecutionExportRepresentation myForms = getExecutionFlowFromFlow(flow, "my forms");
         assertThat(myForms, notNullValue());
         assertThat(myForms.getRequirement(), is("ALTERNATIVE"));
-        assertThat(myForms.getPriority(), is(3));
         assertThat(myForms.isUserSetupAllowed(), is(false));
         assertThat(myForms.isAutheticatorFlow(), is(true));
+
+        if (VersionUtil.ge(KEYCLOAK_VERSION, "25")) {
+            assertThat(myForms.getPriority(), is(26));
+        } else {
+            assertThat(myForms.getPriority(), is(3));
+        }
 
         return flow;
     }
@@ -695,7 +705,7 @@ class ImportAuthenticationFlowsIT extends AbstractImportIT {
         List<AuthenticationExecutionExportRepresentation> executionsId1 = execution.stream()
                 .filter((config) -> config.getAuthenticatorConfig() != null)
                 .filter((config) -> config.getAuthenticatorConfig().equals("id1"))
-                .collect(Collectors.toList());
+                .toList();
 
         assertThat(executionsId1, hasSize(1));
         assertThat(executionsId1.get(0).getAuthenticator(), is("identity-provider-redirector"));
@@ -705,7 +715,7 @@ class ImportAuthenticationFlowsIT extends AbstractImportIT {
         List<AuthenticationExecutionExportRepresentation> executionsId2 = execution.stream()
                 .filter((config) -> config.getAuthenticatorConfig() != null)
                 .filter((config) -> config.getAuthenticatorConfig().equals("id2"))
-                .collect(Collectors.toList());
+                .toList();
 
         assertThat(executionsId2, hasSize(1));
         assertThat(executionsId2.get(0).getAuthenticator(), is("identity-provider-redirector"));
@@ -893,11 +903,7 @@ class ImportAuthenticationFlowsIT extends AbstractImportIT {
         RealmRepresentation realm = keycloakProvider.getInstance().realm(REALM_NAME).partialExport(true, true);
 
         AuthenticationFlowRepresentation flow = getAuthenticationFlow(realm, "registration form");
-        if (VersionUtil.ge(KEYCLOAK_VERSION, "11")) {
-            assertThat(flow.getDescription(), is("updated registration form"));
-        } else {
-            assertThat(flow.getDescription(), is("registration form"));
-        }
+        assertThat(flow.getDescription(), is("updated registration form"));
         assertThat(flow.isBuiltIn(), is(true));
         assertThat(flow.isTopLevel(), is(false));
 
@@ -1134,7 +1140,7 @@ class ImportAuthenticationFlowsIT extends AbstractImportIT {
 
         List<AuthenticationFlowRepresentation> allTopLevelFlow = realm.getAuthenticationFlows()
                 .stream().filter(e -> !e.isBuiltIn())
-                .collect(Collectors.toList());
+                .toList();
 
         assertThat(allTopLevelFlow, is(empty()));
     }
@@ -1208,7 +1214,7 @@ class ImportAuthenticationFlowsIT extends AbstractImportIT {
 
         return executions.stream()
                 .filter(e -> e.getAuthenticator().equals(executionAuthenticator))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private AuthenticationExecutionExportRepresentation getExecutionFlowFromFlow(AuthenticationFlowRepresentation flow, String subFlow) {
